fix some things on ie

--- a/src/app/modules/home/components/tutorials/tutorials.component.scss
+++ b/src/app/modules/home/components/tutorials/tutorials.component.scss
@@ -38,20 +38,21 @@
 			width: 100%;
 			margin-right: 0;
 		}
-	}
 
-	.iframe-container {
-		width: 100%;
-		padding-bottom: 56.25%;
-		height: 0;
-	}
+		.iframe-container {
+			width: 100%;
+			height: 0;
+			padding-bottom: 56.25%;
+			position: relative;
 
-	.iframe-container iframe {
-		width: 100%;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
+			iframe {
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+		}
 	}
 }
 
